<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/oldTweetsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Adding Data" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mDate"
        android:hint="@string/date"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mstation"
        android:hint="@string/station"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/mOdometer"
        android:hint="@string/odometer_reading"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/mGrade"
        android:hint="@string/fuel_grade"
        android:layout_below="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:ems="10"
        android:id="@+id/mAmount"
        android:hint="@string/fuel_amount"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:ems="10"
        android:id="@+id/mUnit"
        android:hint="@string/fuel_unit_cost"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textColorHint="#545454"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#9ce6f9" />

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="#ffb34f" />

</LinearLayout>