<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lq.fuelapptest.ViewDetail"
    android:background="#16a085">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/deleteButton"
        android:background="#FFFFFF"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/license"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/licenseText"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="false"
        android:text="licenseplate goes here"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/driven_kilometers_hint_text"
        android:id="@+id/textView10"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/licenseText"
        android:layout_alignLeft="@+id/drivenKilometersText"
        android:layout_alignStart="@+id/drivenKilometersText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/drivenKilometersText"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="kilometres goes here"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_liters_hint_text"
        android:id="@+id/textView11"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/drivenKilometersText"
        android:layout_alignLeft="@+id/drivenKilometersText"
        android:layout_alignStart="@+id/drivenKilometersText"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="litres of fuel goes here"
        android:id="@+id/litresFuelText"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_price_hint_text"
        android:id="@+id/textView12"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/litresFuelText"
        android:layout_alignLeft="@+id/litresFuelText"
        android:layout_alignStart="@+id/litresFuelText"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="total price geos here"
        android:id="@+id/totalPriceText"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/consumption"
        android:id="@+id/textView14"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/totalPriceText"
        android:layout_alignLeft="@+id/totalPriceText"
        android:layout_alignStart="@+id/totalPriceText"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="consumption goes here"
        android:id="@+id/consumptionText"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ecf0f1"
        android:clickable="true" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout"></FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/frameLayout3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/litresFuelText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/frameLayout2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/totalPriceText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/frameLayout4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/textView14"
        android:layout_below="@+id/drivenKilometersText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/frameLayout5"
        android:layout_below="@+id/consumptionText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/frameLayout6"
        android:layout_toRightOf="@+id/consumptionText"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        android:id="@+id/deleteButton"
        android:background="#D32F2F"
        android:clickable="true"
        android:layout_above="@+id/backButton"
        android:layout_toRightOf="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFFFF" />

</RelativeLayout>
